# website

./: .gitignore  Cargo.toml  flake.nix  nixos.nix  rust-toolchain.toml
public/: style.css
public/events/: epic.md  google.md  madison-graduation.md
public/projects/: simplify.md  website.md
src/: body_pane.rs  common.rs  events.rs  main.rs  summary_pane.rs
src/pages/: events.rs  mod.rs  projects.rs
src/pages/events/: mod.rs
