[package]
name = "website"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
clap = { version = "4.5.34", features = ["derive"] }
comrak = "0.37.0"
maud = { version = "0.27.0", features = ["axum"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.44.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs"] }
